base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: circleci-demo-eks-argocd-app
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: circleci-demo-eks-argocd-app
  type: LoadBalancer
