base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: circleci-demo-eks-argocd-app
spec:
  defaultBackend:
    service:
      name: circleci-demo-eks-argocd-app
      port:
        number: 80
